Bump java version to 25